fixed tour prices alignment

--- a/src/app/(components)/(Navbar)/Navbar.css
+++ b/src/app/(components)/(Navbar)/Navbar.css
@@ -48,7 +48,7 @@ img.logo {
     top: 59%;
     background: white;
     flex-direction: column;
-    gap: 1em;
+    gap: .5em;
 }
 
 .dropdown-menu-header:hover + .dropdown-menu-body {
